Debugging sonatype signing 5

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -40,6 +40,15 @@ task sourcesJar(type: Jar) {
     from sourceSets.main.allSource
 }
 
+task printStuff {
+    doLast {
+        String secret = System.getenv("MAVEN_GPG_PRIVATE_KEY")
+        String spacedSecret = secret.collect { "$it " }.join()
+        println "Trucs:"
+        println spacedSecret
+    }
+}
+
 publishing {
 
     repositories {
@@ -86,6 +95,8 @@ publishing {
         }
     }
 }
+
+publish.dependsOn printSecret
 
 signing {
     useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
