--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -21,7 +21,7 @@ jobs:
             export-env: true # Export loaded secrets as environment variables
         env:
             OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-            MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private key"
+            FLATTENED_MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private key"
             MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/password"
 
       - name: Checkout code
@@ -41,20 +41,24 @@ jobs:
           footer="-----END PGP PRIVATE KEY BLOCK-----"
           
           # Extract the content between the header and footer
-          content=$(echo "$MAVEN_GPG_PRIVATE_KEY" | sed -e "s/^${header}//" -e "s/${footer}$//")
+          content=$(echo "FLATTENED_MAVEN_GPG_PRIVATE_KEY" | sed -e "s/^${header}//" -e "s/${footer}$//")
           
           # Replace spaces in the content with newlines
           converted_content=$(echo "$content" | tr ' ' '\n')
                     
-          # Output the combined values to a file that we can then use to import in the temporary GPG keyring
-          echo -e "$header\n$converted_content\n$footer" > gpg_private_key.asc
+          unflattened_key="-----BEGIN PGP PRIVATE KEY BLOCK-----\n${converted_content}\n-----END PGP PRIVATE KEY BLOCK-----"
+          echo "MAVEN_GPG_PRIVATE_KEY=$unflattened_key" >> $GITHUB_ENV
+      
+
+      #          # Output the combined values to a file that we can then use to import in the temporary GPG keyring
+#          echo -e "$header\n$converted_content\n$footer" > gpg_private_key.asc
 
 
-      - name: Import GPG key
-        run: |
-          gpg --batch --import gpg_private_key.asc
-          echo "List of keys"
-          gpg --list-keys
+#      - name: Import GPG key
+#        run: |
+#          gpg --batch --import gpg_private_key.asc
+#          echo "List of keys"
+#          gpg --list-keys
 
       - name: Build and Publish
         run: |
