--- a/model/build.gradle
+++ b/model/build.gradle
@@ -82,7 +82,8 @@ publishing {
 
 
 signing {
-    useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
+    useInMemoryPgpKeys(gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
+//    useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
     sign publishing.publications.mavenJava
 }
 
