--- a/core/build.gradle
+++ b/core/build.gradle
@@ -99,7 +99,7 @@ publishing {
 publish.dependsOn printStuff
 
 signing {
-    useInMemoryPgpKeys(gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
+    useInMemoryPgpKeys(rootProject.gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
     sign publishing.publications.mavenJava
 }
 
