--- a/main/build.gradle
+++ b/main/build.gradle
@@ -101,7 +101,7 @@ publishing {
 
 signing {
 //    useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
-    useInMemoryPgpKeys(rootProject.gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
+    useInMemoryPgpKeys(project.gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
     sign publishing.publications.mavenJava
 }
 
