--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -50,7 +50,7 @@ jobs:
           # Output the combined values to a file that we can then use to import in the temporary GPG keyring
           echo -e "$header\n$converted_content\n$footer" > gpg_private_key.asc
           
-          echo "MULTI_LINES_TEXT_ENV_VAR<<EOF" >> $GITHUB_ENV
+          echo "MAVEN_GPG_PRIVATE_KEY<<EOF" >> $GITHUB_ENV
           echo -e "$header\n$converted_content\n$footer" >> $GITHUB_ENV
 
           echo "EOF" >> $GITHUB_ENV
