--- a/core/build.gradle
+++ b/core/build.gradle
@@ -99,7 +99,8 @@ publishing {
 publish.dependsOn printStuff
 
 signing {
-    useInMemoryPgpKeys(project.gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
+    useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
+//    useInMemoryPgpKeys(project.gpgKey, System.getenv('MAVEN_GPG_PASSPHRASE'))
     sign publishing.publications.mavenJava
 }
 
