--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -21,7 +21,7 @@ jobs:
             export-env: true # Export loaded secrets as environment variables
         env:
             OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
-            FLATTENED_MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private key"
+            FLATTENED_MAVEN_GPG_PRIVATE_KEY: "op://PUBLIC TRANSIT/sbyeprkd4jejlgnjaualbtc524/Private Key"
             MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/password"
             MAVEN_GPG_KEYID: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Key"
 
