--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,10 @@ plugins {
     id "io.freefair.aggregate-javadoc" version "6.4.3"
     id "pl.allegro.tech.build.axion-release" version "1.13.6"
 }
-//ext.gpgKey = new File('gpg_private_key.asc').text.trim()
-
 
 // Setup and configure properties that are consistent across all projects, including sub-modules.
 allprojects {
-    group 'org.mobilitydata'
+    group 'org.mobilitydata.gtfs-validator'
 
 
     // Per the axion-release plugin, this computes the project version based
