--- a/model/build.gradle
+++ b/model/build.gradle
@@ -4,86 +4,14 @@ plugins {
     id 'signing'
 }
 
+//publishing {
+//    publishing and signing are done in gtfs-validator build.gradle to minimize repetition
+//}
+
+
 dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.jetbrains:annotations:20.1.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
-}
-
-jar {
-    manifest {
-        attributes('Implementation-Title': 'gtfs-validator-model',
-                'Implementation-Version': project.version)
-    }
-}
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
-    from javadoc
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
-
-publishing {
-
-    repositories {
-        maven {
-            url = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2'
-            credentials {
-                username System.getenv("SONATYPE_USERNAME")
-                password System.getenv("SONATYPE_PASSWORD")
-            }
-        }
-    }
-    publications {
-
-        mavenJava(MavenPublication) {
-            from components.java
-            artifactId = 'gtfs-validator-model'
-
-            artifact sourcesJar
-            artifact javadocJar
-
-
-            pom {
-                name = 'gtfs-validator-model'
-                description = 'A description of your project'
-                url = 'https://github.com/MobilityData/gtfs-validator'
-                licenses {
-                    license {
-                        name = 'The Apache License, Version 2.0'
-                        url = 'https://github.com/MobilityData/gtfs-validator/blob/master/LICENSE'
-                    }
-                }
-                developers {
-                    developer {
-                        id = 'jcpitre'
-                        name = 'jcpitre'
-                        email = 'jcpitre@mobilitydata.org'
-                    }
-                }
-                scm {
-                    connection = 'scm:git:git://github.com/MobilityData/gtfs-validator.git'
-                    developerConnection = 'scm:git:ssh://github.com/MobilityData/gtfs-validator.git'
-                    url = 'https://github.com/MobilityData/gtfs-validator'
-                }
-            }
-        }
-    }
-}
-
-signing {
-    useInMemoryPgpKeys(System.getenv('MAVEN_GPG_PRIVATE_KEY'), System.getenv('MAVEN_GPG_PASSPHRASE'))
-    sign publishing.publications.mavenJava
-}
-
-compileJava {
-    options.compilerArgs << '-parameters'
-}
-
-compileTestJava {
-    options.compilerArgs << '-parameters'
 }
