--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,17 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
+/*
+ * A note about publishing and signing.
+ * Maven central requires that artifacts be signed. And upload is done to Sonatype.
+ * To publish you will need these environment variables defined:
+ *       SONATYPE_USERNAME
+ *       SONATYPE_PASSWORD
+ *       MAVEN_GPG_PRIVATE_KEY
+ *       MAVEN_GPG_PASSPHRASE
+ * Suggestion is to put these in a shell script with restricted read permissions, then source it before calling
+ * ./gradlew publish.
+ */
 plugins {
     id 'java'
     id 'maven-publish'
